force-app/main/default/objects/Configured_Object__c/Configured_Object__c.object-meta.xml
<CustomObject>
    <label>Configured Object</label>
    <nameField>
        <label>Objects Configured Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configured Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>