force-app/main/default/objects/Configured_Object__c/fields/Activate__c.field-meta.xml
<CustomField>
    <fullName>Activate__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Used to activate and deactivate the button generated in the Layout of the object.</description>
    <label>Activate</label>
    <type>Checkbox</type>
</CustomField>