force-app/main/default/objects/Configured_Object__c/fields/Layout__c.field-meta.xml
<CustomField>
    <fullName>Layout__c</fullName>
    <description>Used to inform which layout the button will be included in.</description>
    <label>Layout</label>
    <length>52</length>
    <required>true</required>
    <type>Text</type>
</CustomField>