force-app/main/default/objects/Configured_Object__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>Object to define the button.</description>
    <label>Object</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>