force-app/main/default/objects/Configured_Object__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <description>Field to store LWC name.</description>
    <label>Template</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>